--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,12 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
+
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "node index.js"
   },
   "keywords": [],
   "author": "",
