Setup Schema,Update Profile,Fix Bugs

--- a/backend/config/.env
+++ b/backend/config/.env
@@ -6,4 +6,4 @@ JWT_SECRET = "qwhqehwqewyqgeyqwdqqweiqyquewiqueqwxxxx"
 
 AWS_SECRET_KEY = "3ZJZ3QA1Ltwg6u1rwBo58mtx2L80CDjhpAwrk94H"
 AWS_KEY_ID = "AKIAXSEW3VQCFFQJ5J5D"
-AWS_REGION = "ap-south-1"
+AWS_REGION = "us-east-1"
