--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "antd": "^5.4.5",
     "axios": "^1.3.6",
     "country-state-city": "^3.1.4",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -17,7 +18,9 @@
     "react-scripts": "5.0.1",
     "sass": "^1.62.0",
     "sweetalert": "^2.1.2",
-    "web-vitals": "^2.1.4"
+    "swiper": "^9.2.3",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
