--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,12 +8,16 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.4.5",
     "axios": "^1.3.6",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "formik": "^2.2.9",
+    "nodemon": "^2.0.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "sass": "^1.62.0",
+    "sweetalert2": "^11.7.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.1.1"
   },
