--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.3.6",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-gauge-chart": "^0.4.1",
     "react-redux": "^8.0.5",
