--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,9 @@
     "axios": "^1.3.6",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
-    "react-gauge-capacity": "^2.0.1",
+    "react-gauge-chart": "^0.4.1",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "sass": "^1.62.0",
