--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.12.2",
+    "@mui/joy": "^5.0.0-alpha.78",
+    "@mui/material": "^5.12.3",
+    "@mui/styled-engine-sc": "^5.12.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -21,12 +23,14 @@
     "react-circular-progressbar": "^2.1.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
+    "react-gauge-chart": "^0.4.1",
     "react-owl-carousel": "^2.3.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-simple-star-rating": "^5.1.7",
     "sass": "^1.62.0",
+    "styled-components": "^5.3.10",
     "sweetalert": "^2.1.2",
     "swiper": "^9.2.3",
     "web-vitals": "^2.1.4",
