--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,15 +16,15 @@
     "axios": "^1.3.6",
     "formik": "^2.2.9",
     "react": "^18.2.0",
-    "react-datepicker": "^4.11.0",
     "react-bootstrap": "^2.7.4",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
-    
     "react-gauge-chart": "^0.4.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "sass": "^1.62.0",
+    "sweetalert2": "^11.7.3",
     "swiper": "^9.2.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.1.1"
