--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-bootstrap-modal": "^4.2.0",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.2.0",
     "react-owl-carousel": "^2.3.3",
     "react-redux": "^8.0.5",
@@ -23,7 +24,6 @@
     "react-scripts": "5.0.1",
     "react-simple-star-rating": "^5.1.7",
     "sass": "^1.62.0",
-    "swiper": "^9.2.3",
     "swiper": "^9.2.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.1.1"
