--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "formik": "^2.2.9",
     "nodemon": "^2.0.22",
     "react": "^18.2.0",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
