--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,16 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@coreui/bootstrap-react": "^1.0.0-beta.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.12.1",
+    "@mui/x-date-pickers": "^6.3.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.6",
+    "bootstrap": "^5.2.3",
+    "dayjs": "^1.11.7",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-bootstrap-modal": "^4.2.0",
     "react-dom": "^18.2.0",
     "react-owl-carousel": "^2.3.3",
@@ -21,6 +26,7 @@
     "react-scripts": "5.0.1",
     "react-simple-star-rating": "^5.1.7",
     "sass": "^1.62.0",
+    "sweetalert2": "^11.7.5",
     "swiper": "^9.2.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.1.1"
