--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,7 @@
 PORT = 8080
+DB_NAME='utkarsh'
+DB_USER='postgres'
+DB_PASSWORD='12345'
+DB_HOST='192.168.29.209'
+DB_PORT='5432'
+DB_DIALECT=postgres
