--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,11 +17,13 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-gauge-chart": "^0.4.1",
+    "react-hook-form": "^7.43.9",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-simple-star-rating": "^5.1.7",
     "sass": "^1.62.0",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.1.1"
   },
